fix: fix body variables overflow

--- a/src/components/Body/body.module.css
+++ b/src/components/Body/body.module.css
@@ -51,6 +51,7 @@
 
   .variablesWrapper {
     display: flex;
+    overflow: hidden;
     flex-direction: column;
 
     .variables {
